add new cartoon

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Santa's Cookies</h1>
+      <h1>Centering a Div</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/225" rel="prev">
+        <a href="/comics/226" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/65">
+        <a class="random-post" href="/comics/44">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,9 +140,11 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="vertical" role="img" aria-label="cartoon with two panels showing Santa Claus holding a cookie. In the first panel he looks happy and says 'This is how a web developer gets into the nice list!' and the code on the cookie is CSS: '#Santa .cookie { scale: 1.5 }'. In tthe second panel he looks angry and says '...And this is how they end in the naughty list!!' The cookie has some JS code: document.cookie = session_token=secretvalue;path=/">
-        <img src="/comics/226/226-santas-cookie-0.webp" alt="" width="350" />
-        <img src="/comics/226/226-santas-cookie-1.webp" alt="" width="350" />
+      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 4x4 grid showing two characters: one sitting down in front of a computer and the other one looking over her shoulder. In the first panel, the person standing says 'Wow! That CSS Art is great! ...But can you center a div?' Annoyed the person sitting down waits until he leaves and says 'He's always making fun of CSS, and playing that silly joke about centering a div... I know! I'll write the ultimate guide to centering with CSS!' and later 'Done! 58 different ways to center a div in CSS: using a grid, with flex, another grid method, the old table-cell, the newer align-content, that trick Temani showed... All verified and working cross browser... Hey John! Come check this out!' He comes back and in a similar way to the first panel, he says 'Wow! That CSS article is great! ...But can you center a div?' while the sitting character looks really annoyed.">
+        <img src="/comics/227/227-centering-a-div-0.webp" alt="" width="350" />
+        <img src="/comics/227/227-centering-a-div-1.webp" alt="" width="350" />
+        <img src="/comics/227/227-centering-a-div-2.webp" alt="" width="350" />
+        <img src="/comics/227/227-centering-a-div-3.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -152,13 +154,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/225" rel="prev">
+        <a href="/comics/226" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/27">
+        <a class="random-post" href="/comics/117">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -180,9 +182,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/226">https://comicss.art/comics/226</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/226/santas-cookie.png">https://comicss.art/comics/226/santas-cookie.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/226/santas-cookie.html" rel="alternate">https://comicss.art/comics/226/santas-cookie.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/227">https://comicss.art/comics/227</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/227/centering-a-div.png">https://comicss.art/comics/227/centering-a-div.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/227/centering-a-div.html" rel="alternate">https://comicss.art/comics/227/centering-a-div.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
