--- a/comics/229/index.html
+++ b/comics/229/index.html
@@ -9,24 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS</title>
+    <title>comiCSS #229: New Year's Resolutions</title>
 
-    <meta property="og:title" content="comiCSS" />
+    <meta property="og:title" content="comiCSS #229: New Year's Resolutions" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art" />
-    <meta property="og:image" content="https://comicss.art/images/thumb.jpg" />
-    <meta property="og:description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
+    <meta property="og:url" content="https://comicss.art/comics/229" />
+    <meta property="og:image" content="https://comicss.art/comics/229/thumb.png" />
+    <meta property="og:description" content="Comic with 4 panels in a 2x2 grid showing two characters speaking. Person 1: hey! what do you have there? Person 2 (holding a paper): Oh, this? It's a list with my New Year's resolutions. Last year's were unrealistic, but I a positive this year they'll be much better. Last panel is a close up of the paper showing the resolutions for 2025 (crossed out): 1325x845, 750x150, 431x999. And the resolutions for 2026: 1920x1080, 3840x2160, 768x1024, 2560x1440... and someone off-panel says 'Yes, these are better!'" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="http://comicss.art/">
-    <meta name="twitter:title" content="comiCSS">
-    <meta name="twitter:description" content="comiCSS: A webcomic about CSS. Coded in CSS.">
-    <meta name="twitter:image" content="https://comicss.art/images/thumb.jpg">
+    <meta name="twitter:url" content="https://comicss.art/comics/229">
+    <meta name="twitter:title" content="comiCSS #229: New Year's Resolutions">
+    <meta name="twitter:description" content="Comic with 4 panels in a 2x2 grid showing two characters speaking. Person 1: hey! what do you have there? Person 2 (holding a paper): Oh, this? It's a list with my New Year's resolutions. Last year's were unrealistic, but I a positive this year they'll be much better. Last panel is a close up of the paper showing the resolutions for 2025 (crossed out): 1325x845, 750x150, 431x999. And the resolutions for 2026: 1920x1080, 3840x2160, 768x1024, 2560x1440... and someone off-panel says 'Yes, these are better!'">
+    <meta name="twitter:image" content="https://comicss.art/comics/229/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
-    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 
-    <link rel="canonical" href="https://comicss.art" />
+    <link rel="canonical" href="https://comicss.art/comics/229" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -126,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/230" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -140,7 +139,7 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="Comic with 4 panels in a 2x2 grid showing two characters speaking. Person 1: hey! what do you have there? Person 2 (holding a paper): Oh, this? It's a list with my New Year's resolutions. Last year's were unrealistic, but I a positive this year they'll be much better. Last panel is a close up of the paper showing the resolutions for 2025 (crossed out): 1325x845, 750x150, 431x999. And the resolutions for 2026: 1920x1080, 3840x2160, 768x1024, 2560x1440... and someone off-panel says 'Yes, these are better!'">
+      <div id="comic-strip" role="img" class="" aria-label="Comic with 4 panels in a 2x2 grid showing two characters speaking. Person 1: hey! what do you have there? Person 2 (holding a paper): Oh, this? It's a list with my New Year's resolutions. Last year's were unrealistic, but I a positive this year they'll be much better. Last panel is a close up of the paper showing the resolutions for 2025 (crossed out): 1325x845, 750x150, 431x999. And the resolutions for 2026: 1920x1080, 3840x2160, 768x1024, 2560x1440... and someone off-panel says 'Yes, these are better!'">
         <img src="/comics/229/229-new-year-resolutions-0.webp" alt="" width="350" />
         <img src="/comics/229/229-new-year-resolutions-1.webp" alt="" width="350" />
         <img src="/comics/229/229-new-year-resolutions-2.webp" alt="" width="350" />
@@ -168,7 +167,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="#" rel="next">
+        <a href="/comics/230" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -182,8 +181,8 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/229">https://comicss.art/comics/229</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/229/new-year-resolutions.png">https://comicss.art/comics/229/new-year-resolutions.png</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/229">https://comicss.art/comics/229</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/229/new-year-resolutions.png">https://comicss.art/comics/229/new-year-resolutions.png</a></p>
       <p>Source code: <a aria-label="html version" id="code-link" href="/comics/229/new-year-resolutions.html" rel="alternate">https://comicss.art/comics/229/new-year-resolutions.html</a></p>
 
       <hr />
@@ -222,8 +221,8 @@
       </nav>
     </footer>
 
-    <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-01-03"></script>
+    <script>let postId = 229;</script>
+    <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
