--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Alvaro Montoro (alvaromontoro@gmail.com)" />
-    <meta name="keywords" content="comicss,webcomic,css,contact,about,twitter,alvaro_montoro,alvaro montoro,alvaro,montoro,contact" />
+    <meta name="keywords" content="comicss,webcomic,css,contact,about,bluesky,alvaro_montoro,alvaro montoro,alvaro,montoro,contact" />
     <meta name="description" content="Contact information for comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
