replace some game links

--- a/about/index.html
+++ b/about/index.html
@@ -102,7 +102,7 @@
       <p>
         <span class="sitename">comi<span>CSS</span></span> is a webcomic created, designed, and coded by 
         <a href="https://bsky.app/profile/alvaromontoro.com" rel="author external">Alvaro Montoro</a> &mdash;me!&mdash;, a Spanish CSS nerd
-        living in Austin, Texas.
+        living in Austin, Texas. (Want to contact me? Check <a href="/contact/">contact page</a>.)
       </p>
       <p>
         It is a mixture of two passions of mine: CSS and comics. I enjoy drawing using CSS. I know it's not too practical, but I 
