--- a/contact/index.html
+++ b/contact/index.html
@@ -62,7 +62,7 @@
             </a>
           </li>
           <li>
-            <a href="/games/" aria-current="page">
+            <a href="/games/">
               <svg width="1em" height="2em" viewBox="0 0 100 100" aria-hidden="true">
                 <path d="M38,5 62,5 62,38 95,38 95,62 62,62 62,95 38,95 38,62 5,62 5,38 38,38Z" />
               </svg><span>Games</span>
