add dark-light mode + fix accessibility

--- a/games/index.html
+++ b/games/index.html
@@ -112,7 +112,7 @@
         <thead>
           <tr>
             <th>Game</th>
-            <th></th>
+            <th><span class="a11y-hidden">Solutions</span></th>
           </tr>
         </thead>
         <tbody>
