--- a/games/2/index.html
+++ b/games/2/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="comiCSS Games: games about CSS. Coded in CSS (mostly)." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS - Game 1 Solution</title>
+    <title>comiCSS - Games</title>
 
     <meta property="og:title" content="comiCSS" />
     <meta property="og:type" content="website" />
@@ -28,6 +28,8 @@
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
+    <link rel="stylesheet" href="../css/infinity-ring.css" />
+    <script src="../js/infinity-ring.js" defer></script>
   </head>
   <body class="game">
     <a href="#main" class="skip-link">Skip to main content</a>
@@ -97,54 +99,82 @@
     </header>
 
     <main id="main" class="game-main">
-      <h1>ABCnagrams Solution</h1>
-      <p>This page contains the solution to the <a href="./">ABCnagrams game for January 7, 2026</a>.</p>
-      <p>
-        To avoid spoilers, all answers are hidden by default. You can use the toggle to reveal 
-        them whenever you're ready.
-      </p>
-      <label for="show-answers" style="display:flex;align-items:center;gap:0.5rem;cursor:pointer;">
-        <input type="checkbox" id="show-answers" role="switch" />
-        <span>Show answers</span>
-      </label>
       <style>
-        ol li span {
-          filter: blur(0.25rem);
-          transition: filter 0.5s;
-        }
-        :has(#show-answers:checked) ol li span {
-          filter: blur(0);
+        /* These styles change from puzzle to puzzle */
+        body:has(.word0:focus) [for="tile-0"],
+        body:has(.word1:focus) [for="tile-2"],
+        body:has(.word2:focus) [for="tile-5"],
+        body:has(.word3:focus) [for="tile-9"],
+        body:has(.word4:focus) [for="tile-11"],
+        body:has(.word5:focus) [for="tile-12"] { 
+          color: light-dark(#00f, #0ff);
         }
       </style>
-      <ol>
-        <li><span>z-index</span></li>
-        <li><span>mask-mode</span></li>
-        <li><span>border</span></li>
-        <li><span>table-layout</span></li>
-        <li><span>content</span></li>
-        <li><span>tab-size</span></li>
-        <li><span>align-self</span></li>
-        <li><span>cursor</span></li>
-        <li><span>outline-color</span></li>
-        <li><span>border-top</span></li>
-        <li><span>quotes</span></li>
-        <li><span>grid</span></li>
-        <li><span>visibility</span></li>
-        <li><span>justify-self</span></li>
-        <li><span>margin</span></li>
-        <li><span>opacity</span></li>
-        <li><span>color</span></li>
-        <li><span>user-select</span></li>
-        <li><span>isolation</span></li>
-        <li><span>orphans</span></li>
-        <li><span>font-size</span></li>
-        <li><span>columns</span></li>
-        <li><span>border-width</span></li>
-        <li><span>font-variant</span></li>
-        <li><span>word-break</span></li>
-        <li><span>text-align</span></li>
-      </ol>
+      <h1>Infinite Ring</h1>
+      <p id="instructions">
+        Hidden in this ring, there are 6 CSS terms. The end letters of each term are the beginning of the 
+        following term. The last one's ending matches the first one's beginning. The numbers on the tiles 
+        indicate the beginning of the term. Each tile can hold between 2 and 4 characters (you must write 
+        the dashes but they don't count as a character.)
+      </p>
+
+      <article id="game-main">
+        <div class="terms">
+          <h2>Definitions</h2>
+          <label for="tile-0">1. It can be pretty or balanced</label>
+          <label for="tile-2">2. Controls breaks between boxes</label>
+          <label for="tile-5">3. Specifies silent periods in speech media</label>
+          <label for="tile-9">4. Default value for background-repeat</label>
+          <label for="tile-11">5. Function to read data-attributes</label>
+          <label for="tile-12">6. Moves things around</label>
+        </div>
+        <ul>
+          <li data-n="1"><input maxlength="4" id="tile-0"  class="word0 word5" value="" required pattern="[Tt][Ee]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-1"  class="word0" value="" required pattern="[Xx][Tt]-"></li>
+          <li data-n="2"><input maxlength="4" id="tile-2"  class="word0 word1" value="" required pattern="[Ww][Rr][Aa][Pp]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-3"  class="word1" value="" required pattern="-[Bb][Ee]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-4"  class="word1" value="" required pattern="[Ff][Oo]"></li>
+          <li data-n="3"><input maxlength="4" id="tile-5"  class="word1 word2" value="" required pattern="[Rr][Ee]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-6"  class="word2" value="" required pattern="[Ss][Tt]-?"></li>
+          <li data-n="0"><input maxlength="4" id="tile-7"  class="word2" value="" required pattern="-?[Bb][Ee]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-8"  class="word2" value="" required pattern="[Ff][Oo]"></li>
+          <li data-n="4"><input maxlength="4" id="tile-9"  class="word2 word3" value="" required pattern="[Rr][Ee]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-10" class="word3" value="" required pattern="[Pp][Ee]"></li>
+          <li data-n="5"><input maxlength="4" id="tile-11" class="word3 word4" value="" required pattern="[Aa][Tt]"></li>
+          <li data-n="6"><input maxlength="4" id="tile-12" class="word4 word5" value="" required pattern="[Tt][Rr]"></li>
+          <li data-n="0"><input maxlength="4" id="tile-13" class="word5" value="" required pattern="[Aa][Nn][Ss]?"></li>
+          <li data-n="0"><input maxlength="4" id="tile-14" class="word5" value="" required pattern="[Ss]?[Ll][Aa]"></li>
+        </ul>
+      </article>
+
+      <section>
+        <h2>Hints</h2>
+        <ol>
+          <li><a href="https://www.w3.org/TR/css-text-4/" target="_top">CSS Text Module Level 4</a></li>
+          <li><a href="https://www.w3.org/TR/css-text-4/" target="_top">CSS Text Module Level 4</a></li>
+          <li><a href="https://www.w3.org/TR/css-speech-1/" target="_top">CSS Speech Module Level 1</a></li>
+          <li><a href="https://www.w3.org/TR/css-backgrounds-3/" target="_top">CSS Backgrounds and Borders Module Level 3</a></li>
+          <li><a href="https://www.w3.org/TR/css-values-5/" target="_top">CSS Values and Units Module Level 5</a></li>
+          <li><a href="https://www.w3.org/TR/css-transforms-2/" target="_top">CSS Transforms Module Level 2</a></li>
+        </ol>
+      </section>
+
+      <section class="scrim" id="scrim-good" aria-role="alert">
+        <div aria-live="assertive">
+          <h2>Congratulations!!</h2>
+          <p>You solved the puzzle!</h2>
+          <p>Go back to the <a href="/games">games page</a>.</p>
+        </div>
+      </section>
     </main>
+
+    <section class="scrim" open>
+      <div aria-live="polite">
+        <h2>Congratulations!!</h2>
+        <p>You solved the puzzle!</p>
+        <p>Go back to the <a href="/games">games page</a>.</p>
+      </div>
+    </section>
 
     <footer>
       Copyright &copy; 2021-2026. <a href="https://alvaromontoro.com" rel="author external">Alvaro Montoro</a>
