--- a/games/2/index.html
+++ b/games/2/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="comiCSS Games: games about CSS. Coded in CSS (mostly)." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS - Games</title>
+    <title>comiCSS Games: Infinite Ring</title>
 
     <meta property="og:title" content="comiCSS" />
     <meta property="og:type" content="website" />
