--- a/games/index.html
+++ b/games/index.html
@@ -132,6 +132,22 @@
               <a href="/games/1/solution.html">Solution <span class="a11y-hidden">for Game 1</span></a>
             </td>
           </tr>
+          <tr>
+            <td>
+              <a href="/games/4">Guess the Movie (October 27, 2025)</a>
+            </td>
+            <td>
+              <a href="/games/4/solution.html">Solution <span class="a11y-hidden">for Game 4</span></a>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <a href="/games/3">Guess the Brand (February 27, 2023)</a>
+            </td>
+            <td>
+              <a href="/games/3/solution.html">Solution <span class="a11y-hidden">for Game 3</span></a>
+            </td>
+          </tr>
         </tbody>
       </table>
 
