new cartoon: accordions

--- a/comics/231/index.html
+++ b/comics/231/index.html
@@ -9,23 +9,23 @@
     <meta name="description" content="comiCSS: A webcomic about CSS. Coded in CSS." />
     <meta name="theme-color" content="#993399" />
 
-    <title>comiCSS #230: Monster Movie Auditions</title>
+    <title>comiCSS #231: Accordions</title>
 
-    <meta property="og:title" content="comiCSS #230: Monster Movie Auditions" />
+    <meta property="og:title" content="comiCSS #231: Accordions" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comicss.art/comics/230" />
-    <meta property="og:image" content="https://comicss.art/comics/230/thumb.png" />
-    <meta property="og:description" content="comic with 4 panels in a 2x2 grid titled 'monster movie auditions' showing Frankenstein's monster roaring, an alien speaking alienese, the devil saying 'I am here for your soul', and a regular person saying 'I use div as buttons'" />
+    <meta property="og:url" content="https://comicss.art/comics/231" />
+    <meta property="og:image" content="https://comicss.art/comics/231/thumb.png" />
+    <meta property="og:description" content="why was the web developer afraid of accordions? because the devil is in the details (and a cartoon of the devil with a pitchfork coming out of a web accordion/details)" />
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:url" content="https://comicss.art/comics/230">
-    <meta name="twitter:title" content="comiCSS #230: Monster Movie Auditions">
-    <meta name="twitter:description" content="comic with 4 panels in a 2x2 grid titled 'monster movie auditions' showing Frankenstein's monster roaring, an alien speaking alienese, the devil saying 'I am here for your soul', and a regular person saying 'I use div as buttons'">
-    <meta name="twitter:image" content="https://comicss.art/comics/230/thumb.png">
+    <meta name="twitter:url" content="https://comicss.art/comics/231">
+    <meta name="twitter:title" content="comiCSS #231: Accordions">
+    <meta name="twitter:description" content="why was the web developer afraid of accordions? because the devil is in the details (and a cartoon of the devil with a pitchfork coming out of a web accordion/details)">
+    <meta name="twitter:image" content="https://comicss.art/comics/231/thumb.png">
     <link rel="monetization" href="https://fynbos.me/alvaro">
 
     <link rel="shortcut icon" href="/favicon.png" />
 
-    <link rel="canonical" href="https://comicss.art/comics/230" />
+    <link rel="canonical" href="https://comicss.art/comics/231" />
 
     <link rel="stylesheet" href="/css/almond.lite.min.css" />
     <link rel="stylesheet" href="/css/styles.css" />
@@ -96,13 +96,13 @@
         </ul>
       </nav>
     </header>
-    <main id="main">
+    <main id="main" class="latest">
       <noscript>
         This website needs JavaScript to navigate. But, you can see all the drawings linked at once 
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Monster Movie Auditions</h1>
+      <h1>Accordions</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -111,13 +111,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/229" rel="prev">
+        <a href="/comics/230" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/206">
+        <a class="random-post" href="/comics/159">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -125,7 +125,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/231" rel="next">
+        <a href="/comics/232" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -139,11 +139,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" role="img" class="" aria-label="comic with 4 panels in a 2x2 grid titled 'monster movie auditions' showing Frankenstein's monster roaring, an alien speaking alienese, the devil saying 'I am here for your soul', and a regular person saying 'I use div as buttons'">
-        <img src="/comics/230/230-monster-movie-auditions-0.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-1.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-2.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-3.webp" alt="" width="350" />
+      <div id="comic-strip" role="img" class="vertical" aria-label="why was the web developer afraid of accordions? because the devil is in the details (and a cartoon of the devil with a pitchfork coming out of a web accordion/details)">
+        <img src="/comics/231/231-accordions-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -153,13 +150,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/229" rel="prev">
+        <a href="/comics/230" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/133">
+        <a class="random-post" href="/comics/32">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -167,7 +164,7 @@
           </svg>
           <span>Random</span>
         </a>
-        <a href="/comics/231" rel="next">
+        <a href="/comics/232" rel="next">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M25,0 75,50 25,100" />
           </svg>
@@ -181,9 +178,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/230">https://comicss.art/comics/230</a></p>
-      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/230/monster-movie-auditions.png">https://comicss.art/comics/230/monster-movie-auditions.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/230/monster-movie-auditions.html" rel="alternate">https://comicss.art/comics/230/monster-movie-auditions.html</a></p>
+      <p>Permalink: <a aria-label="permanent link" id="permanent-link" href="/comics/231">https://comicss.art/comics/231</a></p>
+      <p>Image link: <a aria-label="image version" id="image-link" href="/comics/231/accordions.png">https://comicss.art/comics/231/accordions.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/231/accordions.html" rel="alternate">https://comicss.art/comics/231/accordions.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -221,7 +218,7 @@
       </nav>
     </footer>
 
-    <script>let postId = 230;</script>
+    <script>let postId = 231;</script>
     <script src="/js/data.js?"></script>
     <script src="/js/code.js"></script>
   </body>
