--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         (without needing any JavaScript) in the <a href="/archive">Archive</a>.
       </noscript>
 
-      <h1>Monster Movie Auditions</h1>
+      <h1>Accordions</h1>
 
       <nav aria-label="Comic strip browsing">
         <a href="/comics/1" rel="first">
@@ -112,13 +112,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/229" rel="prev">
+        <a href="/comics/230" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/206">
+        <a class="random-post" href="/comics/159">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -140,11 +140,8 @@
         </a>
       </nav>
 
-      <div id="comic-strip" class="" role="img" aria-label="comic with 4 panels in a 2x2 grid titled 'monster movie auditions' showing Frankenstein's monster roaring, an alien speaking alienese, the devil saying 'I am here for your soul', and a regular person saying 'I use div as buttons'">
-        <img src="/comics/230/230-monster-movie-auditions-0.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-1.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-2.webp" alt="" width="350" />
-        <img src="/comics/230/230-monster-movie-auditions-3.webp" alt="" width="350" />
+      <div id="comic-strip" class="vertical" role="img" aria-label="why was the web developer afraid of accordions? because the devil is in the details (and a cartoon of the devil with a pitchfork coming out of a web accordion/details)">
+        <img src="/comics/231/231-accordions-0.webp" alt="" width="350" />
       </div>
 
       <nav aria-label="Comic strip browsing">
@@ -154,13 +151,13 @@
           </svg>
           <span>First</span>
         </a>
-        <a href="/comics/229" rel="prev">
+        <a href="/comics/230" rel="prev">
           <svg width="1em" height="1em" viewBox="0 0 100 100" aria-hidden="true">
             <path d="M75,0 25,50 75,100" />
           </svg>
           <span>Previous</span>
         </a>
-        <a class="random-post" href="/comics/133">
+        <a class="random-post" href="/comics/32">
           <svg width="1em" height="1em" viewBox="0 0 100 100" class="random" aria-hidden="true">
             <path class="random" d="M100,25 80,2 80,48Z" />
             <path class="random" d="M100,75 80,98 80,52Z" />
@@ -182,9 +179,9 @@
         </a>
       </nav>
 
-      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/230">https://comicss.art/comics/230</a></p>
-      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/230/monster-movie-auditions.png">https://comicss.art/comics/230/monster-movie-auditions.png</a></p>
-      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/230/monster-movie-auditions.html" rel="alternate">https://comicss.art/comics/230/monster-movie-auditions.html</a></p>
+      <p>Permalink: <a aria-label="permalink" id="permanent-link" href="/comics/231">https://comicss.art/comics/231</a></p>
+      <p>Image link: <a aria-label="image link" id="image-link" href="/comics/231/accordions.png">https://comicss.art/comics/231/accordions.png</a></p>
+      <p>Source code: <a aria-label="html version" id="code-link" href="/comics/231/accordions.html" rel="alternate">https://comicss.art/comics/231/accordions.html</a></p>
 
       <hr />
       <p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc/4.0/" rel="license external noreferrer nofollow">Creative Commons Attribution-NonCommercial 4.0 License</a>.</p>
@@ -223,7 +220,7 @@
     </footer>
 
     <script>let postId = 0;</script>
-    <script src="/js/data.js?last-updated=2026-01-04"></script>
+    <script src="/js/data.js?last-updated=2026-01-12"></script>
     <script src="/js/code.js"></script>
   </body>
 </html>
